Adding LWC integration with the enhanced conversation and the sentiment analysis prompt

--- a/force-app/main/default/classes/SentimentController.cls
+++ b/force-app/main/default/classes/SentimentController.cls
@@ -1,6 +1,6 @@
 public with sharing class SentimentController {
-    @AuraEnabled(cacheable=true)
+    @AuraEnabled
     public static String getSentiment(String message) {
-        return SentimentService.analyzeSentiment(message);
+        return JSON.serialize(SentimentService.analyzeSentiment(message));
     }
 }
