Improving the code structure and implementing the onclick and onConversationEnd methods

--- a/force-app/main/default/classes/SentimentController.cls
+++ b/force-app/main/default/classes/SentimentController.cls
@@ -3,4 +3,26 @@ public with sharing class SentimentController {
     public static String getSentiment(String message) {
         return JSON.serialize(SentimentService.analyzeSentiment(message));
     }
+
+    @AuraEnabled
+    public static String getComponentDefinitions(){
+        Map<String, Object> responseMap = new Map<String, Object>();
+        SentimentAnalysisDefinitions__c definitions = SentimentAnalysisDefinitions__c.getInstance();
+        try {
+            
+            if(definitions != null) {
+                responseMap.put('success', true);
+                responseMap.put('value', JSON.serialize(definitions));
+            }
+            else {
+                responseMap.put('success', false);
+                responseMap.put('error', 'Definitions not found');
+            }
+        } catch (Exception e) {
+            responseMap.put('success', false);
+            responseMap.put('error', e.getMessage());
+        }
+
+        return JSON.serialize(responseMap);
+    }
 }
